hphp/hack/test/typecheck/variadic_args8.php.like_types.exp
File "variadic_args8.php", line 7, characters 18-21:
Invalid argument (Typing[4110])
File "variadic_args8.php", line 3, characters 23-28:
Expected string
File "variadic_args8.php", line 5, characters 12-14:
But got int
